--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                   <div class="articles__image articles__image--3">
                       <img class="label articles__label">
                   </div>
-                  <div class="articles__content">
-                      <div class="tags">
+                  <div class="articles__content articles__content--3">
+                      <div class="tags articles__tags--3">
                           <ul class="tags__list">
                               <li>Fashion</li>
                               <li>Artículo</li>
@@ -199,11 +199,13 @@
                               <li>Proyecto</li>
                           </ul>
                       </div>
-                      <h2 class="articles__title">¿Cómo hacer el cambio de carrera a Diseño de Productos Digitales?</h2>
-                      <div class="articles__description">
+                      <h2 class="articles__title articles__title--3">¿Cómo hacer el cambio de carrera a Diseño de Productos Digitales?</h2>
+                      <div class="articles__description articles__description--3">
                           <p>¿Quieres saber qué se estudia para ser paisajista y formar parte de uno de los gremios que están en auge a nivel laboral? Sigue leyendo.</p>
                       </div>
-                      <div class="articles__date"></div>
+                      <div class="articles__date articles__date--3">
+                        <span>january</span>
+                      </div>
                   </div>
                 </div>
                 <div class="articles__item articles__item--4">
@@ -468,12 +470,160 @@
                 </div>
             </div>
             <div class="subscribe__image">
-              <!-- <img src="./images/subscribe/illustration-sm.svg" alt=""> -->
+             
+              <picture>
+                <source srcset="./images/subscribe/illustration-xl.svg" media="(min-width: 1279px)">
+                <source srcset="./images/subscribe/illustration-md.svg" media="(min-width: 769px)">
+                <img src="./images/subscribe/illustration-sm.svg" alt="">
+              </picture>
+            </div>
+          </div>
+        </div>
+        <div class="ticker">
+          <div class="ticker__subscribe--discount">
+            <div class="ticker__wrapper">
+              <div class="ticker__item">
+                <svg
+                  width="41"
+                  height="41"
+                  viewBox="0 0 41 41"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M19.4448 0.950085L25.1961 15.8901L40.7912 19.5062L25.8512 25.2576L22.235 40.8526L16.4837 25.9126L0.888603 22.2965L15.8286 16.5451L19.4448 0.950085Z"
+                    fill="#1B1F21"
+                  />
+                </svg>
+                <h2 class="ticker__title">Descuento para cursos 20%</h2>
+              </div>
+              <div class="ticker__item">
+                <svg
+                  width="41"
+                  height="41"
+                  viewBox="0 0 41 41"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M19.4448 0.950085L25.1961 15.8901L40.7912 19.5062L25.8512 25.2576L22.235 40.8526L16.4837 25.9126L0.888603 22.2965L15.8286 16.5451L19.4448 0.950085Z"
+                    fill="#1B1F21"
+                  />
+                </svg>
+                <h2 class="ticker__title">Descuento para cursos 20%</h2>
+              </div>
+              <div class="ticker__item">
+                <svg
+                  width="41"
+                  height="41"
+                  viewBox="0 0 41 41"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M19.4448 0.950085L25.1961 15.8901L40.7912 19.5062L25.8512 25.2576L22.235 40.8526L16.4837 25.9126L0.888603 22.2965L15.8286 16.5451L19.4448 0.950085Z"
+                    fill="#1B1F21"
+                  />
+                </svg>
+                <h2 class="ticker__title">Descuento para cursos 20%</h2>
+                <svg
+                  width="41"
+                  height="41"
+                  viewBox="0 0 41 41"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M19.4448 0.950085L25.1961 15.8901L40.7912 19.5062L25.8512 25.2576L22.235 40.8526L16.4837 25.9126L0.888603 22.2965L15.8286 16.5451L19.4448 0.950085Z"
+                    fill="#1B1F21"
+                  />
+                </svg>
+              </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__image">
+            <img src="./images/logo_white.svg" class="footer__logo">
+            <img src="./images/footer/award.svg" alt="" class="footer__award">
+          </div>
+          <div class="footer__icons">
+            <img src="./images/footer/instagram.svg" alt="">
+            <img src="./images/footer/facebook.svg" alt="">
+            <img src="./images/footer/youtube.svg" alt="">
+            <img src="./images/footer/linkedin.svg" alt="">
+          </div>
+          <div class="footer__menu">
+            <div class="footer__column">
+              <h4>CURSOR</h4>
+              <ul class="footer__list">
+                <li class="footer__item">Diseño</li>
+                <li class="footer__item">Programación & Data</li>
+                <li class="footer__item">Gaming</li>
+                <li class="footer__item">Marketing</li>
+                <li class="footer__item">Software</li>
+              </ul>
+            </div>
+            <div class="footer__column">
+              <h4>CURSOR</h4>
+              <ul class="footer__list">
+                <li class="footer__item">Diseño</li>
+                <li class="footer__item">Programación & Data</li>
+                <li class="footer__item">Gaming</li>
+                <li class="footer__item">Marketing</li>
+                <li class="footer__item">Software</li>
+              </ul>
+            </div>
+            <div class="footer__column">
+              <h4>CURSOR</h4>
+              <ul class="footer__list">
+                <li class="footer__item">Diseño</li>
+                <li class="footer__item">Programación & Data</li>
+                <li class="footer__item">Gaming</li>
+                <li class="footer__item">Marketing</li>
+                <li class="footer__item">Software</li>
+              </ul>
+            </div>
+            <div class="footer__column">
+              <h4>CURSOR</h4>
+              <ul class="footer__list">
+                <li class="footer__item">Diseño</li>
+                <li class="footer__item">Programación & Data</li>
+                <li class="footer__item">Gaming</li>
+                <li class="footer__item">Marketing</li>
+                <li class="footer__item">Software</li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer__contacts">
+            <div class="footer__whatsapp">
+              <p>WhatsApp</p>
+              <p>+52 55 9225-2629</p>
+            </div>
+            <div class="footer__telephon">
+              <p>Telefone</p>
+              <p>+52 55 9225-2629</p>
+            </div>
+            <div class="footer__email">
+              <p>email</p>
+              <p>Ebac.mx@gmail.com</p>
+            </div>
+          </div>
+          <div class="footer__subscribe">
+            <input placeholder="Su correo electrónico">
+            <button>Suscribirse al boletín</button>
+          </div>
+          <div class="footer__copyright">
+            <p>AVISO DE PRIVACIDAD ALUMNOS</p>
+            <p>AVISO DE PRIVACIDAD PROFESORES</p>
+            <p>TÉRMINOS Y CONDICIONES</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
